Fixed a problem with some blooks being stretched out

--- a/style.css
+++ b/style.css
@@ -172,14 +172,14 @@ a:visited {
 }
 
 .statImg {
-  width: 50px;
+  max-width: 50px;
   height: 50px;
   transform: rotate(-15deg);
   position: absolute;
   left: -32px;
 }
 .statImg img {
-  width: 50px;
+  max-width: 50px;
   height: 50px;
 }
 
@@ -347,7 +347,7 @@ h3.settingsText {
 }
 
 .lb_person_div img {
-  width: 60px;
+  max-width: 60px;
   height: 65px;
 }
 
@@ -435,7 +435,7 @@ input::file-selector-button {
     font-size: 20px;
   }
   .lb_person_div img {
-    width: 45px;
+    max-width: 45px;
     height: 50px;
   }
   .rainbow {
